bug sweet controller 'margin-dark mode'

--- a/public/template/assets/css/main/app-dark.css
+++ b/public/template/assets/css/main/app-dark.css
@@ -371,7 +371,6 @@ body.theme-dark textarea {
     font-family: inherit;
     font-size: inherit;
     line-height: inherit;
-    margin: 0
 }
 
 body.theme-dark button,
